--- a/packages/picasso-testsuite-ui/src/components/system.styl
+++ b/packages/picasso-testsuite-ui/src/components/system.styl
@@ -2,97 +2,123 @@
 body
   margin: 0;
   #system-root
+    height: 100%;
     .guide
       width: 100%;
+      height: 100%;
+      z-index: 1;
       p
         cursor: pointer;
         margin-left: 50px;
       .top-container
         width: 100%;
         background-color: #00A3FF;
-        height:100px;
+        height:10%;
         display: flex;
         justify-content: flex-start;
         align-items: center;
       .main-container
+        height: 90%;
+        line-height: 3em;
         .function-p
           p
           color: #00A3FF;
         .foot
           div
             margin-left: 50px;
-          span
+          a
             color: #00A3FF;
             cursor: pointer;
 
-    .page-header
-      border-bottom: 1px solid rgba(180, 180, 180, 1);
-      height: 50px;
-      .title
-        font-weight: bold;
-        width: 200px;
-        margin-left: 10px;
-        padding-top: 15px;
-        display: inline-block;
-      .icon-list
-        width: 150px;
-        padding-top: 10px;
-        display: inline-block;
-        float: right;
-        .icon
-          svg
-            width: 20px;
-            height: 20px; 
-    .main-page
-      position: absolute;
-      width: 90%;
-      right:0;
-      .icons-list
-        margin-top: 10px;
-        display: inline-block;
-        .icon
-          svg
-            width: 20px;
-            height: 20px; 
-      .icons-list-right
-        width: 150px;
-        margin-top: 10px;
-        float: right;
-        display: inline-block;
-        .icon
-          svg
-            width: 20px;
-            height: 20px; 
+    #system-page
+      z-index: 2;
+      height: 100%;
+      .head
+        height: 5%;
+        .page-header
+          border-bottom: 1px solid rgba(180, 180, 180, 1);
+          height: 100%;
+          .project-span
+            line-height: 3em;
+            margin-left: 1em;
+          .title
+            font-weight: bold;
+            width: 200px;
+            margin-left: 10px;
+            padding-top: 6px;
+            .icon
+              svg
+                width: 20px;
+                height: 20px; 
 
-      .top-url
-        margin: 0;
-      .input
-        div
-          .span-name
-            width: 30px;
+          .icon-list
+            width: 150px;
+            padding-top: 10px;
             display: inline-block;
+            float: right;
+            .icon
+              svg
+                width: 20px;
+                height: 20px; 
+      .content
+        height: 75%;
+        position: relative;
+        .main-page
+          position: absolute;
+          height: 100%;
+          width: 90%;
+          right:0;
+          .icons-list
+            margin-top: 10px;
+            display: inline-block;
+            .icon
+              svg
+                width: 20px;
+                height: 20px; 
+          .icons-list-right
+            a
+              color: #000;
+            width: 150px;
+            margin-top: 10px;
+            float: right;
+            display: inline-block;
+            .icon
+              svg
+                width: 20px;
+                height: 20px; 
 
-    .testcase
-      width: 9%;
-      .top-select
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    .menubar
-      position: absolute;
-      bottom: 20%;
-      width: 100%;
-      .icons-list-right
-        width: 30px;
-        margin-top: 10px;
-        display: inline-block;
+          .top-url
+            margin: 0;
+          .input
+            div
+              .span-name
+                width: 30px;
+                display: inline-block;
+        .testcase
+          width: 9%;
+          height: 100%;
+          border-right: 1px solid #a9a9a9;
+          .top-select
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 90%;
+      .foot
         position: absolute;
-        right:0;
         bottom: 0;
-        .icon
-          svg
-            width: 20px;
-            height: 20px; 
+        width: 100%;
+        height: 20%;
+        .menubar
+          position: relative;
+          .icons-list-right
+            width: 30px;
+            position: absolute;
+            right:0;
+            bottom: 0;
+            .icon
+              svg
+                width: 20px;
+                height: 20px; 
 
 
 
